fix: Scrollbar on code snippet.

--- a/src/styles/libraries/syntax.scss
+++ b/src/styles/libraries/syntax.scss
@@ -375,5 +375,15 @@ code .highlight-line:before {
 
 code .code-wrapper {
     margin-left: 80px;
+    max-width: 580px;
     position: absolute;
+}
+
+.code-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.code-wrapper {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
